# HENSDK

./: .gitignore  CMakeLists.txt  CMakePresets.json  CODINGGUIDELINES.md  LICENSE.txt  README.md  THIRD_PARTY_NOTICES.txt  console.txt
.github/workflows/: cmake-linux.yml  cmake-multi-platform.yml  cmake-windows.yml
EggEditor/: CMakeLists.txt
EggEditor/res/config/: DefaultUILayout.ini
EggEditor/res/models/skybox/: skybox.glb
EggEditor/src/: EggEditor.cpp  EggEditor.h  ModelImporter.cpp  ModelImporter.h  TestLevel.h  main.cpp
EggEditor/src/UI/: ComponentWindow.cpp  ComponentWindow.h  EditorWindow.cpp  EditorWindow.h  LevelWindow.cpp  LevelWindow.h  ToolWindow.cpp  ToolWindow.h
HENEngine/: CMakeLists.txt  HENEngine.h  console.txt
HENEngine/include/core/: henApplication.h  henArguments.h  henCVar.h  henJobSystem.h  henMath.h  henSlotMap.h  henTimer.h  henVersion.h
HENEngine/include/graphics/: henGraphics.h  henGraphics_OpenGL.h  henGraphics_Shader.h  henShader.h
HENEngine/include/helpers/: henTimer.h
HENEngine/include/input/: henInput.h
HENEngine/include/level/: henLevel.h  henLevel_Components.h  henLevel_Primitives.h
HENEngine/include/math/: henMath.h
HENEngine/include/physics/: henPhysics.h
HENEngine/include/renderer/: henRHC.h  henRHC_OpenGL.h  henRenderHardwareContext.h  henRenderer.h  henRenderer_ResourceManagers.h  henRenderer_ShaderManager.h
HENEngine/include/scene/: henScene.h  henScene_Actors.h
HENEngine/include/tools/: henConfig.h  henConsole.h  henHelpers.h
HENEngine/include/ui/: henUI.h
HENEngine/res/shaders/GLSL/: 3DSkyboxShaderFS.glsl  3DSkyboxShaderVS.glsl  BaseShaderFS.glsl  BaseShaderVS.glsl  LitShaderFS.glsl  LitShaderVS.glsl  PrimitiveShaderFS.glsl  PrimitiveShaderVS.glsl  SkyboxShaderFS.glsl  SkyboxShaderVS.glsl  TriangleFS.glsl  TriangleVS.glsl
HENEngine/src/: henApplication.cpp  henCommonInclude.h  henConsole.cpp  henInput.cpp  henRHC_OpenGL.cpp  henRHC_OpenGL.h  henRenderer.cpp  henSceneActors.cpp  henScene_Actors.cpp  henShader.cpp
HENEngine/src/core/: henApplication.cpp  henArguments.cpp  henCVar.cpp  henJobSystem.cpp
HENEngine/src/graphics/: henGraphics.cpp  henGraphics_OpenGL.cpp  henGraphics_OpenGL.h  henGraphics_Shader.cpp
HENEngine/src/input/: henInput.cpp
HENEngine/src/level/: henLevel.cpp  henLevel_Primitives.cpp
HENEngine/src/physics/: henPhysics.cpp
HENEngine/src/renderer/: henRHC_OpenGL.cpp  henRHC_OpenGL.h  henRenderer.cpp  henRenderer_ResourceManagers.cpp  henRenderer_ShaderManager.cpp
HENEngine/src/scene/: henScene.cpp  henScene_Actors.cpp
HENEngine/src/tools/: henConfig.cpp  henConsole.cpp  henHelpers.cpp
HENEngine/src/ui/: henUI.cpp
